# photon-mosaic-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test_lint_type.yml
docs/source/: conf.py  index.rst  modules.rst  mypackage.rst
examples/: demo.ipynb  demo_al.ipynb  sandbox.ipynb
sandbox/: demo.ipynb
src/photon_mosaic_demo/: __init__.py
src/photon_mosaic_demo/core/: __init__.py  base_processor.py  baseimaging.py  baserois.py  binaryimaging.py  generators.py  imaging_tools.py  job_tools.py  numpyimaging.py  utils.py
src/photon_mosaic_demo/extraction/: suite2p_extraction.py
src/photon_mosaic_demo/extractors/: __init__.py  baseroiextractors.py  baseroisextarctors.py  roiextractors.py  suite2prois.py
src/photon_mosaic_demo/preprocessing/: __init__.py  basepreprocessor.py  edge_detector.py  laplace_filter.py  median_filter.py
src/photon_mosaic_demo/registration/: __init__.py  model.py  reference_image.py  suite2p_registration.py
src/photon_mosaic_demo/segmentation/: __init__.py  run_segmentation.py  segmentation_methods.py  suite2p.py
src/photon_mosaic_demo/widgets/: __init__.py  rois.py  series.py
