[project]
name = "mypackage"
version = "0.1.0"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[project.optional-dependencies]
docs = [
    'Sphinx',
    'sphinx-jinja',
    'furo',
    'docutils'
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
