[project]
name = "photon-mosaic-demo"
version = "0.1.0"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "spikeinterface",
    "roiextractors",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
    "natsort",
    "tifffile"
]

[project.optional-dependencies]
docs = [
    'Sphinx',
    'sphinx-jinja',
    'furo',
    'docutils'
]
widgets = [
    "ipywidgets>=8.0.0",
    "matplotlib>=3.5.0",
    "ipympl"
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.setuptools.packages.find]
where = ["src"]
